# mitsubishi-heatpump-homekit

./: .gitignore  .gitmodules  CMakeLists.txt  CODEX_GUIDE.md  CONTRIBUTING.md  FLASHING.md  HOMESPAN_MIGRATION_PLAN.md  INSTALL.md  PLAN.md  PROJECT_ANALYSIS.md  README.md  SECURITY.md  SUPPORT.md  build.py  mitsubishi-homekit.ino  partitions.csv  platformio.ini  sdkconfig.defaults
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
components/app_config/: CMakeLists.txt
components/app_config/include/: app_config.h  app_config_local.example.h
components/build_info/: CMakeLists.txt  build_info.cpp
components/build_info/include/: build_info.h
components/cn105_transport/: CMakeLists.txt  cn105_transport.cpp
components/cn105_transport/include/: cn105_transport.h
components/core_cn105/: CMakeLists.txt  cn105_core.cpp
components/core_cn105/include/: cn105_core.h
components/device_settings/: CMakeLists.txt  device_settings.cpp
components/device_settings/include/: device_settings.h
components/homekit_bridge/: CMakeLists.txt  homekit_bridge.cpp
components/homekit_bridge/include/: homekit_bridge.h
components/ota_handler/: CMakeLists.txt  ota_handler.cpp
components/ota_handler/include/: ota_handler.h
components/platform_fs/: CMakeLists.txt  platform_fs.cpp
components/platform_fs/include/: platform_fs.h
components/platform_led/: CMakeLists.txt  platform_led.cpp
components/platform_led/include/: platform_led.h
components/platform_lock/: CMakeLists.txt  platform_lock.cpp
components/platform_lock/include/: platform_lock.h
components/platform_log/: CMakeLists.txt  platform_log.cpp
components/platform_log/include/: platform_log.h
components/platform_maintenance/: CMakeLists.txt  platform_maintenance.cpp
components/platform_maintenance/include/: platform_maintenance.h
components/platform_provisioning/: CMakeLists.txt  platform_provisioning.cpp
components/platform_provisioning/include/: platform_provisioning.h
components/platform_uart/: CMakeLists.txt  cn105_uart.cpp
components/platform_uart/include/: cn105_uart.h
components/platform_wifi/: CMakeLists.txt  platform_wifi.cpp
components/platform_wifi/include/: platform_wifi.h
components/web/: CMakeLists.txt  web_http.cpp  web_pages.cpp  web_routes.cpp  web_server.cpp
components/web/include/: web_assets.h  web_http.h  web_pages.h  web_routes.h  web_server.h
components/web/pages/: admin.html  admin.js  debug.html  debug.js  files.html  files.js  loader.js  logs.html  logs.js  root.html  root.js  style.css  tabs.html
components/web/tools/: build_assets.py
debug_apps/cn105_probe/: CMakeLists.txt  README.md  sdkconfig.defaults
debug_apps/cn105_probe/main/: CMakeLists.txt  app_main.cpp
main/: CMakeLists.txt  app_main.cpp
site/: ble_provisioning.html  flash.html  index.html  kiri.css
site/lib/: kiri.d.ts  kiri.js
src/: AppConfig.h  AppSecrets.example.h  Cn105Serial.h  DebugLog.h  FahrenheitSupport.h  FileSystemManager.h  HKHeaterCooler.h  HomeKitManager.h  HomeKitReset.h  MitsubishiProtocol.h  MitsubishiTypes.h  WebUI.h  WiFiManager.h
web_flasher/: ble_provisioning.html  flash.html
webui/: README.md  package-lock.json  package.json  tsconfig.json
webui/src/: HomeKitPairingTile.tsx  api.ts  components.tsx  installer.tsx  layout.tsx  main.tsx  router.ts  store.ts  styles.css  types.ts
webui/src/lib/: ota.ts
webui/src/pages/: Admin.tsx  Control.tsx  Logs.tsx
webui/tools/: bundle.mjs
